# zheng-shang-you

./: .gitignore  pyproject.toml
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
docs/: lessons_learnt.md
scripts/: train.py
src/zsy/: __init__.py  agents.py  cards.py  cli.py  combinations.py  encoding.py  evaluate.py  game.py  jing_gong.py  legal_moves.py  network.py  player.py  ranking.py  self_play.py  trainer.py  tui.py  web.py  wildcard.py
src/zsy/static/: index.html
tests/: test_agents.py  test_cards.py  test_combinations.py  test_comprehensive.py  test_encoding.py  test_evaluate.py  test_game.py  test_heuristic_agent.py  test_jing_gong.py  test_legal_moves.py  test_network.py  test_player.py  test_ranking.py  test_self_play.py  test_team_mode.py  test_trainer.py  test_wildcard.py
