[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zsy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual>=1.0", "rich>=13.0"]

[project.scripts]
zsy = "zsy.cli:main"
zsy-tui = "zsy.tui:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
