[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zsy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual>=1.0", "rich>=13.0", "fastapi>=0.110", "uvicorn[standard]>=0.27", "aiofiles>=23.0", "numpy>=1.24", "torch>=2.0"]

[project.scripts]
zsy = "zsy.cli:main"
zsy-tui = "zsy.tui:main"
zsy-web = "zsy.web:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
